# mcp-google-adk

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cli/: main.py
config/: __init__.py  servers.json
servers/http/: server_launcher.py  temperature_server.py
servers/stdio/: terminal_server.py
src/: __init__.py
src/agent/: __init__.py  agent_wrapper.py
src/client/: __init__.py  mcp_client.py
src/utils/: config_loader.py  formatters.py
tests/: __init__.py  test_agent.py  test_client.py  test_servers.py
workspace/: .gitkeep
