[project]
name = "mcp-google-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio-mqtt>=0.13.0",
    "black>=23.0.0",
    "click>=8.1.7",
    "fastmcp>=0.9.0",
    "flake8>=6.1.0",
    "google-adk>=1.5.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-generativeai>=0.3.0",
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "uvicorn>=0.35.0",
]
